# FastAPI_S3_Uploads

./: .dockerignore  .geminiignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  NEW_FEATURES.md  README.md  TODO.md  boot.sh  compose-multi.yml  compose.sh  compose.yml  compose22.yml  main.py  mongo-setup.sh  pyproject.toml  testchangestreams.py
config/: config.py
frontend/src/: App.tsx  ProgressBar.css  ProgressBar.tsx  UploadCard.tsx  UploadList.tsx  UploadsLayout.css  index.css
scripts/docker/mongo/: mongo-init.js
server/: config.py  database.py  models.py  validator.py
